--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--timestamp=1622233340-->
+<!--timestamp=1622236612-->
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,7 @@
   <title>Is FreeBSD Released?</title>
   <link rel="icon" href="https://released.info/assets/img/technologies/freebsd/freebsd.ico" type="image/svg+xml">
   <meta name="description" content="Is FreeBSD Released?">
-  <meta name="keywords">
+  <meta name="keywords"  content="FreeBSD, release, date, when, os, operating, system">
   <meta name=”robots” content="index, follow">
 
   <!-- facebook -->
@@ -106,7 +106,7 @@
               <!-- <span role="img" aria-label="_IMAGE_ALT_" style="background-image: url('_ITERATOR_IMAGE_SRC_');">-->
               <span role="img" aria-label="${post.imageAlt}"
                     style="background-image: url(&#39;https://released.info/assets/img/technologies/freebsd/book-Absolute-FreeBSD.jpg&#39;);">
-                <a target="_blank" href="https://www.amazon.com/Absolute-FreeBSD-3rd-Complete-Guide/dp/1593278926">
+                <a target="_blank" href="https://www.amazon.de/-/en/Michael-W-Lucas-ebook/dp/B0776JKXNR">
                   <span>
                     Absolute FreeBSD
                   </span>
@@ -120,7 +120,7 @@
               <!-- <span role="img" aria-label="_IMAGE_ALT_" style="background-image: url('_ITERATOR_IMAGE_SRC_');">-->
               <span role="img" aria-label="${post.imageAlt}"
                     style="background-image: url(&#39;https://released.info/assets/img/technologies/freebsd/book-Design-and-Implementation-of-the-FreeBSD-Operating-System.jpg&#39;);">
-                <a target="_blank" href="https://www.amazon.com/Design-Implementation-FreeBSD-Operating-System-ebook/dp/B00O56CFEE">
+                <a target="_blank" href="https://www.amazon.de/-/en/Marshall-Kirk-McKusick-ebook/dp/B00O56CFEE">
                   <span>
                     Design and Implementation of the FreeBSD Operating System
                   </span>
@@ -134,7 +134,7 @@
               <!-- <span role="img" aria-label="_IMAGE_ALT_" style="background-image: url('_ITERATOR_IMAGE_SRC_');">-->
               <span role="img" aria-label="${post.imageAlt}"
                     style="background-image: url(&#39;https://released.info/assets/img/technologies/freebsd/book-The-Complete-FreeBSD.jpg&#39;);">
-                <a target="_blank" href="https://www.amazon.com/Complete-FreeBSD-Documentation-Source/dp/0596005164">
+                <a target="_blank" href="https://www.amazon.de/-/en/Greg-Lehey/dp/0596005164">
                   <span>
                     The Complete FreeBSD
                   </span>
@@ -148,7 +148,7 @@
               <!-- <span role="img" aria-label="_IMAGE_ALT_" style="background-image: url('_ITERATOR_IMAGE_SRC_');">-->
               <span role="img" aria-label="${post.imageAlt}"
                     style="background-image: url(&#39;https://released.info/assets/img/technologies/freebsd/book-The-Design-And-Implementation-Of-The-Freebsd-Operating-System.jpg&#39;);">
-                <a target="_blank" href="https://www.amazon.com/Design-Implementation-FreeBSD-Operating-System/dp/0201702452">
+                <a target="_blank" href="https://www.amazon.de/-/en/Marshall-K-McKusick/dp/0201702452">
                   <span>
                     The Design And Implementation Of The Freebsd Operating System
                   </span>
@@ -162,7 +162,7 @@
               <!-- <span role="img" aria-label="_IMAGE_ALT_" style="background-image: url('_ITERATOR_IMAGE_SRC_');">-->
               <span role="img" aria-label="${post.imageAlt}"
                     style="background-image: url(&#39;https://released.info/assets/img/technologies/freebsd/book-FreeBSD-Device-Drivers.jpg&#39;);">
-                <a target="_blank" href="https://www.amazon.com/FreeBSD-Device-Drivers-Guide-Intrepid/dp/1593272049">
+                <a target="_blank" href="https://www.amazon.de/-/en/Joseph-Kong/dp/1593272049">
                   <span>
                     FreeBSD Device Drivers
                   </span>
@@ -176,7 +176,7 @@
               <!-- <span role="img" aria-label="_IMAGE_ALT_" style="background-image: url('_ITERATOR_IMAGE_SRC_');">-->
               <span role="img" aria-label="${post.imageAlt}"
                     style="background-image: url(&#39;https://released.info/assets/img/technologies/freebsd/book-FreeBSD-mastery.jpg&#39;);">
-                <a target="_blank" href="https://www.amazon.com/FreeBSD-Mastery-Advanced-ZFS/dp/164235001X">
+                <a target="_blank" href="https://www.amazon.de/-/en/Michael-W-Lucas/dp/164235001X">
                   <span>
                     FreeBSD Mastery: Advanced ZFS
                   </span>
