--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--timestamp=1622236612-->
+<!--timestamp=1622236641-->
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -81,7 +81,7 @@
         <h3>There is no information about FreeBSD 13.1 release date</h3>
       </span>
       <span>
-        <h4>FreeBSD has been released at 13 April 2021</h4>
+        <h4>FreeBSD has been released on 13th April 2021</h4>
       </span>
 
       <div class="text-center">
