--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--timestamp=1622367225-->
+<!--timestamp=1622368197-->
 
 <head>
   <meta charset="UTF-8">
@@ -82,17 +82,18 @@
 
           </div>
         </div>
-        <span>
-          <h3>
-            There is no information about FreeBSD 13.1 release date
-          </h3>
-        </span>
-        <span>
-          <h4>
-            FreeBSD has been released on 13th April 2021
-          </h4>
-        </span>
-
+        <div class="row">
+          <div class="col-lg-8">
+            <h3>
+              There is no information about FreeBSD 13.1 release date
+            </h3>
+          </div>
+          <div class="col-lg-8">
+            <h4>
+              FreeBSD has been released on 13th April 2021
+            </h4>
+          </div>
+        </div>
         <div class="text-center">
           <a class="share-twitter" target="_blank">
             <i class="bi bi-twitter"></i>
