--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--timestamp=1622370720-->
+<!--timestamp=1622372473-->
 
 <head>
   <meta charset="UTF-8">
@@ -207,7 +207,8 @@
     </section>
 
     <section class="about-section">
-  <div class="container-lg">
+      <div class="container-lg">
+        <div>
     <h2>About</h2>
     FreeBSD is an operating system that can run on most modern machines. The operating system is Unix-like,
     and it is accordingly programmed mostly in C. The default user interface is simply the Unix shell by default.
@@ -238,8 +239,9 @@
     The update ensued the upgrade and actualization of a number of drivers, and minor changes were made in general.
     13.0 was released on April 13, 2021, with the previous version being released on October 27, 2020.
     There is not an expected release date for the next version yet.
-  </div>
-</section>
+</div>
+      </div>
+    </section>
 
     <section class="newsletter-section">
       <div class="container-lg">
