--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--timestamp=1622664909-->
+<!--timestamp=1622665424-->
 
 <head>
   <meta charset="UTF-8">
@@ -130,7 +130,7 @@
               <!-- <span role="img" aria-label="_IMAGE_ALT_" style="background-image: url('_ITERATOR_IMAGE_SRC_');">-->
               <span role="img" aria-label="${post.imageAlt}"
                 style="background-image: url(&#39;https://released.info/assets/img/technologies/freebsd/book-Absolute-FreeBSD.jpg&#39;);">
-                <a target="_blank" href="https://www.amazon.de/-/en/Michael-W-Lucas-ebook/dp/B0776JKXNR">
+                <a target="_blank" href="https://www.amazon.de/-/en/Michael-W-Lucas-ebook/dp/B0776JKXNR?&amp;_encoding=UTF8&amp;tag=released-info-21&amp;linkCode=ur2&amp;linkId=148efc9a2276569f8c31b135e1f77403&amp;camp=1638&amp;creative=6742">
                   <span>
                     Absolute FreeBSD
                   </span>
@@ -144,7 +144,7 @@
               <!-- <span role="img" aria-label="_IMAGE_ALT_" style="background-image: url('_ITERATOR_IMAGE_SRC_');">-->
               <span role="img" aria-label="${post.imageAlt}"
                 style="background-image: url(&#39;https://released.info/assets/img/technologies/freebsd/book-Design-and-Implementation-of-the-FreeBSD-Operating-System.jpg&#39;);">
-                <a target="_blank" href="https://www.amazon.de/-/en/Marshall-Kirk-McKusick-ebook/dp/B00O56CFEE">
+                <a target="_blank" href="https://www.amazon.de/-/en/Marshall-Kirk-McKusick-ebook/dp/B00O56CFEE?&amp;_encoding=UTF8&amp;tag=released-info-21&amp;linkCode=ur2&amp;linkId=8c417e7e1c0bfffbd4f4f8cc38be541c&amp;camp=1638&amp;creative=6742">
                   <span>
                     Design and Implementation of the FreeBSD Operating System
                   </span>
@@ -158,7 +158,7 @@
               <!-- <span role="img" aria-label="_IMAGE_ALT_" style="background-image: url('_ITERATOR_IMAGE_SRC_');">-->
               <span role="img" aria-label="${post.imageAlt}"
                 style="background-image: url(&#39;https://released.info/assets/img/technologies/freebsd/book-The-Complete-FreeBSD.jpg&#39;);">
-                <a target="_blank" href="https://www.amazon.de/-/en/Greg-Lehey/dp/0596005164">
+                <a target="_blank" href="https://www.amazon.de/-/en/Greg-Lehey/dp/0596005164?&amp;_encoding=UTF8&amp;tag=released-info-21&amp;linkCode=ur2&amp;linkId=65ce609a8c2ffeef929879e90dba9787&amp;camp=1638&amp;creative=6742">
                   <span>
                     The Complete FreeBSD
                   </span>
@@ -172,7 +172,7 @@
               <!-- <span role="img" aria-label="_IMAGE_ALT_" style="background-image: url('_ITERATOR_IMAGE_SRC_');">-->
               <span role="img" aria-label="${post.imageAlt}"
                 style="background-image: url(&#39;https://released.info/assets/img/technologies/freebsd/book-The-Design-And-Implementation-Of-The-Freebsd-Operating-System.jpg&#39;);">
-                <a target="_blank" href="https://www.amazon.de/-/en/Marshall-K-McKusick/dp/0201702452">
+                <a target="_blank" href="https://www.amazon.de/-/en/Marshall-K-McKusick/dp/0201702452?&amp;_encoding=UTF8&amp;tag=released-info-21&amp;linkCode=ur2&amp;linkId=d0506393cb31dd2037192d16349c6b08&amp;camp=1638&amp;creative=6742">
                   <span>
                     The Design And Implementation Of The Freebsd Operating System
                   </span>
@@ -186,7 +186,7 @@
               <!-- <span role="img" aria-label="_IMAGE_ALT_" style="background-image: url('_ITERATOR_IMAGE_SRC_');">-->
               <span role="img" aria-label="${post.imageAlt}"
                 style="background-image: url(&#39;https://released.info/assets/img/technologies/freebsd/book-FreeBSD-Device-Drivers.jpg&#39;);">
-                <a target="_blank" href="https://www.amazon.de/-/en/Joseph-Kong/dp/1593272049">
+                <a target="_blank" href="https://www.amazon.de/-/en/Joseph-Kong/dp/1593272049?&amp;_encoding=UTF8&amp;tag=released-info-21&amp;linkCode=ur2&amp;linkId=2305d1f034f399374747f55ffcad1f33&amp;camp=1638&amp;creative=6742">
                   <span>
                     FreeBSD Device Drivers
                   </span>
@@ -200,7 +200,7 @@
               <!-- <span role="img" aria-label="_IMAGE_ALT_" style="background-image: url('_ITERATOR_IMAGE_SRC_');">-->
               <span role="img" aria-label="${post.imageAlt}"
                 style="background-image: url(&#39;https://released.info/assets/img/technologies/freebsd/book-FreeBSD-mastery.jpg&#39;);">
-                <a target="_blank" href="https://www.amazon.de/-/en/Michael-W-Lucas/dp/164235001X">
+                <a target="_blank" href="https://www.amazon.de/-/en/Michael-W-Lucas/dp/164235001X?&amp;_encoding=UTF8&amp;tag=released-info-21&amp;linkCode=ur2&amp;linkId=a34deb4888f9c061ea55ce4cea352b07&amp;camp=1638&amp;creative=6742">
                   <span>
                     FreeBSD Mastery: Advanced ZFS
                   </span>
