--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--timestamp=1622979631-->
+<!--timestamp=1622980734-->
 
 <head>
   <meta charset="UTF-8">
@@ -257,29 +257,32 @@
     stands for “Berkeley Software Distribution”, which points us to the fact that FreeBSD was developed in the
     prestigious University of UCBerkeley, and is maintained and updated from this place still.
     You can download FreeBSD easily, but it is also available in the form of a CD or flash drive.<br />
-    <br />
-    FreeBSD is used not so much as a daily tool like some Linux distributions or Windows and macOS.
-    Instead, FreeBSD holds very prominent use in servers, mostly high-end ones, take for example Email servers,
-    web servers in general, or any sort of server that requires higher reliability and functionality than
-    what you might get with a machine running Windows or something of the sort.
-    A very important feature that adds to the server functionality is that with proper hardware and maintenance,
-    FreeBSD can run for years without having to reboot, which is crucial for maintaining a stable server
-    in the case of businesses and services.<br />
-    <br />
-    FreeBSD has remarkable properties such as security that is arguably top of the line when working with data.
-    It has access control lists, automatic security auditing, among many other characteristics that are
-    constantly being developed by some of the smartest scholarly minds for the good of the general public,
-    as they do so free of charge. One of the key features of FreeBSD are jails, which are akin to virtual machines,
-    which can run processes inside but cannot access other components of the machine and the system in general.
-    This is useful when dealing with highly protected data and is a very welcome addition to the operating system.
-    As another key feature, FreeBSD is a multi-user system that can run simultaneous processes,
-    and also handles them quite elegantly. This feature is very useful when having multiple people working on
-    the same server and machine.<br />
-    <h3>Releases</h3>
-    FreeBSD is currently in 13.0, with the very notable addition of making 64-bit ARM architecture a priority in support.
-    The update ensued the upgrade and actualization of a number of drivers, and minor changes were made in general.
-    13.0 was released on April 13, 2021, with the previous version being released on October 27, 2020.
-    There is not an expected release date for the next version yet.
+    <div id="hidden-about">
+        <br />
+        FreeBSD is used not so much as a daily tool like some Linux distributions or Windows and macOS.
+        Instead, FreeBSD holds very prominent use in servers, mostly high-end ones, take for example Email servers,
+        web servers in general, or any sort of server that requires higher reliability and functionality than
+        what you might get with a machine running Windows or something of the sort.
+        A very important feature that adds to the server functionality is that with proper hardware and maintenance,
+        FreeBSD can run for years without having to reboot, which is crucial for maintaining a stable server
+        in the case of businesses and services.<br />
+        <br />
+        FreeBSD has remarkable properties such as security that is arguably top of the line when working with data.
+        It has access control lists, automatic security auditing, among many other characteristics that are
+        constantly being developed by some of the smartest scholarly minds for the good of the general public,
+        as they do so free of charge. One of the key features of FreeBSD are jails, which are akin to virtual machines,
+        which can run processes inside but cannot access other components of the machine and the system in general.
+        This is useful when dealing with highly protected data and is a very welcome addition to the operating system.
+        As another key feature, FreeBSD is a multi-user system that can run simultaneous processes,
+        and also handles them quite elegantly. This feature is very useful when having multiple people working on
+        the same server and machine.<br />
+        <h3>Releases</h3>
+        FreeBSD is currently in 13.0, with the very notable addition of making 64-bit ARM architecture a priority in
+        support.
+        The update ensued the upgrade and actualization of a number of drivers, and minor changes were made in general.
+        13.0 was released on April 13, 2021, with the previous version being released on October 27, 2020.
+        There is not an expected release date for the next version yet.
+    </div>
 </div>
       </div>
     </section>
