--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--timestamp=1623050637-->
+<!--timestamp=1623052588-->
 
 <head>
   <meta charset="UTF-8">
@@ -106,7 +106,7 @@
           </div>
           <div class="col-lg-8">
             <h4 id="highlightTextDescription2">
-              FreeBSD has been released on 13th April 2021
+              FreeBSD has been released <span class="highlightFoundedText">on 13th April 2021</span>
             </h4>
           </div>
         </div>
