--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--timestamp=1623069599-->
+<!--timestamp=1623077888-->
 
 <head>
   <meta charset="UTF-8">
@@ -46,8 +46,6 @@
 <body>
 
   <input id="released-days" type="hidden" value="-1" />
-  
-  
 
   <main role="main">
     <a href="https://released.info/index.html" class="go-back"><i class="bi bi-arrow-left"></i></a>
@@ -106,7 +104,7 @@
           </div>
           <div class="col-lg-8">
             <h4 id="highlightTextDescription2">
-              FreeBSD has been released <span class="highlightFoundedText">on 13th April 2021</span>
+              FreeBSD has been released <span class="btn-primary">on 13th April 2021</span>
             </h4>
           </div>
         </div>
