--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--timestamp=1653437988-->
+<!--timestamp=1657787651-->
 
 <head>
   <meta charset="UTF-8">
@@ -21,14 +21,14 @@
   <meta property="og:url" content="https://is.freebsd.released.info" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Is FreeBSD Released?" />
-  <meta property="og:description" content="FreeBSD 13.1 will be released in -1 days! #released.info" />
+  <meta property="og:description" content="FreeBSD 13.2 will be released in 171 days! #released.info" />
   <meta property="og:image" content="https://released.info/assets/img/technologies/freebsd/freebsd-logo.png" />
 
   <!-- twitter -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="ReleasedInfo" />
   <meta name="twitter:title" content="Is FreeBSD Released?" />
-  <meta name="twitter:description" content="FreeBSD 13.1 will be released in -1 days! #released.info" />
+  <meta name="twitter:description" content="FreeBSD 13.2 will be released in 171 days! #released.info" />
   <meta name="twitter:image" content="https://released.info/assets/img/technologies/freebsd/freebsd-logo.png" />
 
   <meta name="url" content="https://is.freebsd.released.info" />
@@ -45,7 +45,7 @@
 
 <body>
 
-  <input id="released-days" type="hidden" value="-1" />
+  <input id="released-days" type="hidden" value="171" />
 
   <main role="main">
     <a href="https://released.info/index.html" class="go-back"><i class="bi bi-arrow-left"></i></a>
@@ -99,14 +99,10 @@
         <div class="row">
           <div class="col-lg-8">
             <h3 id="highlightTextDescription1">
-              There is no information about FreeBSD 13.1 release date
+              There is <span class="btn-primary">no clear information</span> about release of FreeBSD 13.2
             </h3>
           </div>
-          <div class="col-lg-8">
-            <h4 id="highlightTextDescription2">
-              FreeBSD has been released <span class="btn-primary">on 13th April 2022</span>
-            </h4>
-          </div>
+          
         </div>
         <div class="text-center">
           <a class="share-twitter" target="_blank">
