--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--timestamp=1682156981-->
+<!--timestamp=1682321977-->
 
 <head>
   <meta charset="UTF-8">
@@ -23,14 +23,14 @@
   <meta property="og:url" content="https://is.freebsd.released.info" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Is FreeBSD Released?" />
-  <meta property="og:description" content="FreeBSD 13.2 will be released in -1 days! #released.info" />
+  <meta property="og:description" content="FreeBSD 14 will be released in -1 days! #released.info" />
   <meta property="og:image" content="https://released.info/assets/img/technologies/freebsd/freebsd-logo.png" />
 
   <!-- twitter -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="ReleasedInfo" />
   <meta name="twitter:title" content="Is FreeBSD Released?" />
-  <meta name="twitter:description" content="FreeBSD 13.2 will be released in -1 days! #released.info" />
+  <meta name="twitter:description" content="FreeBSD 14 will be released in -1 days! #released.info" />
   <meta name="twitter:image" content="https://released.info/assets/img/technologies/freebsd/freebsd-logo.png" />
 
   <meta name="url" content="https://is.freebsd.released.info" />
@@ -101,14 +101,10 @@
         <div class="row">
           <div class="col-lg-8">
             <h3 id="highlightTextDescription1">
-              Days until Java 20 is officially released
+              FreeBSD 13.2 has been released on <span class="btn-primary">27th April 2023</span>
             </h3>
           </div>
-          <div class="col-lg-8">
-            <h4 id="highlightTextDescription2">
-              FreeBSD 13.2 release is planned to be on <span class="btn-primary">27th March 2023</span>
-            </h4>
-          </div>
+          
         </div>
         <div class="text-center">
           <a class="share-twitter" target="_blank">
@@ -119,50 +115,7 @@
       </div>
     </section>
 
-    <section class="features-section">
-      <div class="container-lg">
-        <h2>
-          Meet FreeBSD 13.2
-        </h2>
-        <div class="row mb-5">
-          <div class="col-md-5">
-
-            <ul>
-              <li>
-                Default CPUTYPE Change
-              </li>
-            </ul>
-
-            <ul>
-              <li>
-                Source-based upgrades
-              </li>
-            </ul>
-
-          </div>
-          <div class="col-md-5">
-            <ul>
-              <li>
-                supported using the freebsd-update(8) utility
-              </li>
-            </ul>
-            <ul>
-              <li>
-                Users of all powerpc architectures, after successful kernel and world installation, will need to run manually "kldxref /boot/kernel
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="text-center">
-          <a target="_blank" href="https://www.freebsd.org/releases/13.2R/relnotes/" class="btn btn-primary btn-lg">Read more</a>
-        </div>
-      </div>
-      <div class="logo-container">
-        <span role="img" aria-label="${configuration.logoAlt2}"
-          style="background-image: url(&#39;https://released.info/assets/img/technologies/freebsd/freebsd-logo2.png&#39;);">
-        </span>
-      </div>
-    </section>
+    
 
     <section class="posts-section">
       <div class="container-lg">
