--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--timestamp=1714608985-->
+<!--timestamp=1738271482-->
 
 <head>
   <meta charset="UTF-8">
@@ -115,7 +115,56 @@
       </div>
     </section>
 
-    
+    <section class="features-section">
+      <div class="container-lg">
+        <h2>
+          Meet FreeBSD 15
+        </h2>
+        <div class="row mb-5">
+          <div class="col-md-5">
+
+            <ul>
+              <li>
+                Container Infrastructure
+              </li>
+            </ul>
+
+            <ul>
+              <li>
+                ELF Kernel Dump Format
+              </li>
+            </ul>
+
+            <ul>
+              <li>
+                Package Base Initiative
+              </li>
+            </ul>
+
+          </div>
+          <div class="col-md-5">
+            <ul>
+              <li>
+                Release Schedule Changes
+              </li>
+            </ul>
+            <ul>
+              <li>
+                Shorter Support Periods
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="text-center">
+          <a target="_blank" href="https://freebsdfoundation.org/blog/2024-freebsd-developer-summit-freebsd-15-release-planning/?utm_source=chatgpt.com" class="btn btn-primary btn-lg">Read more</a>
+        </div>
+      </div>
+      <div class="logo-container">
+        <span role="img" aria-label="${configuration.logoAlt2}"
+          style="background-image: url(&#39;https://released.info/assets/img/technologies/freebsd/freebsd-logo2.png&#39;);">
+        </span>
+      </div>
+    </section>
 
     <section class="posts-section">
       <div class="container-lg">
